--- a/style.css
+++ b/style.css
@@ -27,7 +27,7 @@ body{
 }
 
 .logo{
-  width:10%;
+  width: 25%;
   padding:1%;
 }
 
@@ -39,7 +39,7 @@ body{
     height:fit-content
 }
 
-.q-mark{
+#q-mark{
   height:70px;
   width: 70px;
   align-items:flex-start;
@@ -47,20 +47,22 @@ body{
 
 .jake{
   display: flex;
-  padding:2%;
+  padding-left:2%;
+  padding-top:2%;
+  height:20%;
+  width:30%;
 }
 
 .desktop-home-page .frame-4{
   display:flex;
   flex-direction:row;
-  justify-content:center;
+  justify-content:left;
 }
 
 .desktop-home-page .nav-bar{
   display:flex;
-  flex-direction:column;
+  flex-direction:row;
   justify-content:flex-end;
-  padding-right:2%;
   color:#EDA32D;
 }
 
@@ -77,6 +79,7 @@ body{
   justify-content:stretch;
   width:100%;
   padding-top:50px;
+  height:20%;
 }
 
 .desktop-home-page .about-me{
@@ -232,16 +235,42 @@ body{
       border-radius:30px;
   }
 
+  .desktop-home-page .frame-4{
+    display:flex;
+    flex-direction:column;
+    justify-content:center;
+  }
+
   .desktop-home-page .background-word{
     font-family:Outward;
-    font-size:1000%
+    font-size:1500%;
     color:#EFDC8F;
   }
 
   .desktop-home-page .about-me{
     display:flex;
-    width:40%;
-    flex-direction:row;
+    width:80%;
+    flex-direction:column;
+    height:20%;
 }
 
+.about-me-blurb{
+  justify-content: center;
+}
+
+.ellipse{
+  height: 20%;
+}
+
+
+.desktop-home-page .explore-carousel{
+  overflow-x: scroll;
+
   }
+
+.jake{
+  padding:1%;
+  flex-direction:column-reverse;
+  size: 30%;
+}
+}
