--- a/style.css
+++ b/style.css
@@ -115,7 +115,7 @@ body{
 
 .desktop-home-page .explore-carousel-container{
     position: relative;
-    width: 110%;
+    width: 100%;
     overflow:hidden;
 }
 
@@ -128,7 +128,7 @@ body{
     margin-right: -90px;
     overflow-x: scroll;
     position: relative;
-    width: 1440px;
+    overflow:hidden;
   }
 
 .explore-carousel::-webkit-scrollbar{
